tests/parser/invalid/missing_semicolon.src
fn main() {
    int x = 42  // Ошибка: пропущена ;
    return x;
}